# ClaudeSkillsForAndroid

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  README_SPEC_FIRST.md  install.ps1  install.sh  pyproject.toml  requirements.txt  setup.py
.claude/commands/: spec-start.md  spec-validate.md
.claude/skills/android-compose-navigation/: SKILL.md
.claude/skills/android-compose-theming/: SKILL.md
.claude/skills/android-datastore/: SKILL.md
.claude/skills/android-forms-validation/: SKILL.md
.claude/skills/android-git-conventional-commits/: SKILL.md
.claude/skills/android-git-multi-commit-feature/: SKILL.md
.claude/skills/android-git-spec-workflow/: SKILL.md
.claude/skills/android-gradle-config/: SKILL.md
.claude/skills/android-json-kotlinx/: SKILL.md
.claude/skills/android-json-moshi/: SKILL.md
.claude/skills/android-list-ui/: SKILL.md
.claude/skills/android-mvvm-architecture/: SKILL.md
.claude/skills/android-one-time-events/: SKILL.md
.claude/skills/android-paging3/: SKILL.md
.claude/skills/android-permissions/: SKILL.md
.claude/skills/android-stateflow/: SKILL.md
.claude/skills/android-testing-mockk/: SKILL.md
.claude/skills/android-testing-turbine/: SKILL.md
.claude/skills/android-workmanager/: SKILL.md
aidk/: __init__.py  cli.py  code_builder.py  doc_syncer.py  installer.py  spec_builder.py  updater.py  validate_specs.py
aidk/data/examples/product-catalog/: README.md  SPEC.md  architecture.md
aidk/data/skills/android-animation-lottie/: SKILL.md
aidk/data/skills/android-clean-architecture/: SKILL.md
aidk/data/skills/android-compose-testing/: SKILL.md
aidk/data/skills/android-compose-ui/: SKILL.md
aidk/data/skills/android-coroutines/: SKILL.md
aidk/data/skills/android-database-room/: SKILL.md
aidk/data/skills/android-git-atomic-commits/: SKILL.md
aidk/data/skills/android-hilt-di/: SKILL.md
aidk/data/skills/android-image-loading/: SKILL.md
aidk/data/skills/android-koin-di/: SKILL.md
aidk/data/skills/android-logging-timber/: SKILL.md
aidk/data/skills/android-material-components/: SKILL.md
aidk/data/skills/android-project-setup/: SKILL.md
aidk/data/templates/: feature-spec.md
docs/guides/: real-world-example.md  workflow-guide.md
specs/examples/user-authentication/: SPEC.md
specs/templates/: api-spec.md  ui-spec.md
tools/: spec_builder.py  spec_prompt_hook.py
(+24 files in other folders)
