[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "android-ai-devkit"
version = "1.0.0"
description = "AI-powered SPEC-First Android development framework with 36 specialized skills"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = [
    "android",
    "ai",
    "development-kit",
    "spec-first",
    "clean-architecture",
    "jetpack-compose",
    "claude-code",
    "code-generation"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]

dependencies = [
    "pyyaml>=6.0.1",
    "markdown>=3.5.1",
    "jinja2>=3.1.2",
    "click>=8.1.7",
    "rich>=13.7.0",
    "prompt-toolkit>=3.0.43",
    "requests>=2.31.0",
    "colorama>=0.4.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "black>=23.12.0",
    "ruff>=0.1.8",
    "mypy>=1.7.1",
]

[project.urls]
Homepage = "https://github.com/yourusername/android-ai-devkit"
Documentation = "https://github.com/yourusername/android-ai-devkit/blob/main/README.md"
Repository = "https://github.com/yourusername/android-ai-devkit"
Issues = "https://github.com/yourusername/android-ai-devkit/issues"
Changelog = "https://github.com/yourusername/android-ai-devkit/blob/main/CHANGELOG.md"

[project.scripts]
aidk = "aidk.cli:main"

[tool.setuptools]
packages = ["aidk"]

[tool.setuptools.package-data]
aidk = [
    "data/skills/**/*",
    "data/templates/**/*",
    "data/examples/**/*",
]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
